--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Super Rad Site :)</title>
     <link rel="icon" type="image/x-icon" href="/./Assets/icon.ico">
-    <link rel="stylesheet" href="./styles/isleStyle.css" />
+    <link rel="stylesheet" href="/styles/isleStyle.css" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="format-detection" content="telephone=no">
